--- a/css/main.css
+++ b/css/main.css
@@ -156,3 +156,11 @@ footer {
 .politics {
   background-image: linear-gradient(180deg, rgb(255, 255, 255), rgb(200, 200, 200));
 }
+
+.headerPrivacy {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  padding: 30px 20px;
+  background-image: linear-gradient(180deg, rgb(220, 220, 220), rgb(141, 133, 133));
+}
